--- a/Final Project/notebook.ipynb
+++ b/Final Project/notebook.ipynb
@@ -12,11 +12,10 @@
     "\n",
     "The information of this dataset is shown in the table below. This is a binary problem that divides tumors into benign and malignant tumors.\n",
     "\n",
-    "|||||||\n",
-    "|--- |--- |--- |--- |--- |--- |\n",
     "|Data Set Characteristics:|Multivariate|Number of Instances:|569|Area:|Life|\n",
-    "|Attribute Characteristics:|Real|Number of Attributes:|32|Date Donated|1995-11-01|\n",
-    "|Associated Tasks:|Classification|Missing Values?|No|Number of Web Hits:|689725|\n",
+    "|--- |--- |--- |--- |--- |--- |\n",
+    "|**Attribute Characteristics:**|**Real**|**Number of Attributes:**|**32**|**Date Donated**|**1995-11-01**|\n",
+    "|**Associated Tasks:**|**Classification**|**Missing Values?**|**No**|**Number of Web Hits:**|**689725**|\n",
     "\n",
     "\n",
     "Features are computed from a digitized image of a fine needle aspirate (FNA) of a breast mass. They describe characteristics of the cell nuclei present in the image. \n",
@@ -55,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -269,7 +268,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
