--- a/Final Project/notebook.ipynb
+++ b/Final Project/notebook.ipynb
@@ -1176,6 +1176,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Conclusion\n",
+    "With randomly selected 80% of data used for training and 20% for testing, we separately utilized the SVM and decision tree classifier, the classification accuracy of which was 0.96 and 0.95. Consequently, we choose the SVM classifier to run in the APP. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Data Set 2\n",
     "Use the SVM classifier:"
    ]
@@ -1302,6 +1310,14 @@
     "model= DecisionTreeClassifier()\n",
     "Classification_model_gridsearchCV(model,param_grid,x_train_dataset2,y_train_dataset2,\n",
     "                                 x_test_dataset2,y_test_dataset2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Conclusion\n",
+    "With randomly selected 80% of data used for training and 20% for testing, we separately utilized the SVM and decision tree classifier, the classification accuracy of which was 0.66 and 0.36. Consequently, we choose the SVM classifier to run in the APP."
    ]
   },
   {
@@ -1836,6 +1852,14 @@
     "    pred_confidence = class_enc.classes_[np.argmax(mammo_model.predict(cur_img)[0],-1)]\n",
     "    attn_ax.set_title('Attention Map\\nPred:%s' % (pred_confidence))\n",
     "fig.savefig('attention_map.png', dpi = 300)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Conclusion\n",
+    "With randomly selected 80% of data used for training and 20% for testing, we reshaped the figures into 2D instead of 1D feature vectors, maintaining the 2D semantic information, and acquiring a classification accuracy of 0.67."
    ]
   }
  ],
